--- a/index.html
+++ b/index.html
@@ -46,6 +46,13 @@
             padding: 10px 20px;
             font-size: 18px;
             cursor: pointer;
+            background-color: #007BFF;
+            color: white;
+            border: none;
+            border-radius: 5px;
+        }
+        #start-button:active {
+            background-color: #0056b3;
         }
         .touch-zone {
             position: absolute;
