--- a/index.html
+++ b/index.html
@@ -60,6 +60,7 @@
             width: 50%;
             height: 100%;
             cursor: pointer;
+            z-index: 10;
         }
         .left-zone {
             left: 0;
