--- a/index.html
+++ b/index.html
@@ -41,58 +41,64 @@
             font-size: 24px;
             margin-top: 20px;
         }
-        #start-button {
-            margin-top: 50px;
+        .button {
             padding: 10px 20px;
             font-size: 18px;
             cursor: pointer;
-            background-color: #007BFF;
-            color: white;
-            border: none;
-            border-radius: 5px;
+            margin: 20px;
         }
-        #start-button:active {
-            background-color: #0056b3;
+        #mobile-controls {
+            display: none;
         }
-        .touch-zone {
+        @media (max-width: 768px) {
+            #desktop-controls {
+                display: none;
+            }
+            #mobile-controls {
+                display: block;
+            }
+            .button {
+                font-size: 22px;
+            }
+        }
+        .zone {
             position: absolute;
-            top: 0;
             width: 50%;
             height: 100%;
+            top: 0;
             cursor: pointer;
-            z-index: 10;
         }
-        .left-zone {
+        #left-zone {
             left: 0;
-            background-color: rgba(255, 0, 0, 0.1); /* Light red for visual feedback */
+            background-color: rgba(0, 0, 0, 0.1);
         }
-        .right-zone {
+        #right-zone {
             right: 0;
-            background-color: rgba(0, 0, 255, 0.1); /* Light blue for visual feedback */
+            background-color: rgba(0, 0, 0, 0.1);
         }
     </style>
 </head>
 <body>
     <h1>Shame IAT Test</h1>
     <div id="instructions">
-        <p>Premi il pulsante Start per iniziare.</p>
-        <button id="start-button">Start</button>
+        <p id="desktop-controls">Premi la barra spaziatrice per iniziare. Usa il tasto sinistro per "Io" o "Vergogna" e il tasto destro per "Non Io" o "Ansia".</p>
+        <p id="mobile-controls">Premi il pulsante Start per iniziare e clicca sulle aree a sinistra e destra dello schermo.</p>
+        <button id="start-button" class="button">Start</button>
     </div>
 
     <div id="iat-container" class="hidden">
         <div id="category-left" class="corner left-corner"></div>
         <div id="category-right" class="corner right-corner"></div>
         <div id="stimulus"></div>
-        <div id="error-message" class="error hidden">X</div>
+        <div id="left-zone" class="zone"></div>
+        <div id="right-zone" class="zone"></div>
     </div>
 
+    <div id="error-message" class="error hidden">X</div>
     <div id="results" class="hidden">
         <h2>Risultati</h2>
         <p id="reaction-times"></p>
     </div>
-
-    <div class="touch-zone left-zone"></div>
-    <div class="touch-zone right-zone"></div>
 
     <script src="iat.js"></script>
 </body>
