--- a/index.html
+++ b/index.html
@@ -41,57 +41,18 @@
             font-size: 24px;
             margin-top: 20px;
         }
-        .button {
-            padding: 10px 20px;
-            font-size: 18px;
-            cursor: pointer;
-            margin: 20px;
-        }
-        #mobile-controls {
-            display: none;
-        }
-        @media (max-width: 768px) {
-            #desktop-controls {
-                display: none;
-            }
-            #mobile-controls {
-                display: block;
-            }
-            .button {
-                font-size: 22px;
-            }
-        }
-        .zone {
-            position: absolute;
-            width: 50%;
-            height: 100%;
-            top: 0;
-            cursor: pointer;
-        }
-        #left-zone {
-            left: 0;
-            background-color: rgba(0, 0, 0, 0.1);
-        }
-        #right-zone {
-            right: 0;
-            background-color: rgba(0, 0, 0, 0.1);
-        }
     </style>
 </head>
 <body>
     <h1>Shame IAT Test</h1>
     <div id="instructions">
-        <p id="desktop-controls">Premi la barra spaziatrice per iniziare. Usa il tasto sinistro per "Io" o "Vergogna" e il tasto destro per "Non Io" o "Ansia".</p>
-        <p id="mobile-controls">Premi il pulsante Start per iniziare e clicca sulle aree a sinistra e destra dello schermo.</p>
-        <button id="start-button" class="button">Start</button>
+        <p>Premi la barra spaziatrice per iniziare. Usa il tasto sinistro per "Io" o "Vergogna" e il tasto destro per "Non Io" o "Ansia".</p>
     </div>
 
     <div id="iat-container" class="hidden">
         <div id="category-left" class="corner left-corner"></div>
         <div id="category-right" class="corner right-corner"></div>
         <div id="stimulus"></div>
-        <div id="left-zone" class="zone"></div>
-        <div id="right-zone" class="zone"></div>
     </div>
 
     <div id="error-message" class="error hidden">X</div>
