--- a/index.html
+++ b/index.html
@@ -3,73 +3,40 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Shame IAT Test</title>
+    <title>Test IAT</title>
     <style>
-        body {
-            font-family: Arial, sans-serif;
-            text-align: center;
-            padding: 20px;
+        #iat-container.hidden, #results.hidden {
+            display: none;
+        }
+        #start-btn {
+            display: none; /* Mostra il pulsante solo su mobile */
         }
         .hidden {
             display: none;
         }
-        #iat-container {
-            margin-top: 50px;
-            position: relative;
-            height: 200px;
-        }
-        .corner {
-            position: absolute;
-            top: 20px;
-            font-size: 24px;
-        }
-        .left-corner {
-            left: 20px;
-        }
-        .right-corner {
-            right: 20px;
-        }
-        #stimulus {
-            font-size: 30px;
-            position: absolute;
-            top: 50%;
-            left: 50%;
-            transform: translate(-50%, -50%);
-        }
-        .error {
-            color: red;
-            font-size: 24px;
-            margin-top: 20px;
-        }
-        #start-btn {
-            display: none;
-            font-size: 24px;
-            padding: 10px 20px;
-            margin-top: 20px;
-            background-color: #007BFF;
-            color: white;
-            border: none;
-            border-radius: 5px;
-            cursor: pointer;
-        }
+        /* Add additional styling as needed */
     </style>
 </head>
 <body>
-    <h1>Shame IAT Test</h1>
     <div id="instructions">
-        <p>Premi la barra spaziatrice per iniziare. Usa il tasto sinistro per "Io" o "Vergogna" e il tasto destro per "Non Io" o "Ansia".</p>
+        <h1>Istruzioni</h1>
+        <p>Leggi attentamente le istruzioni per il test.</p>
+        <p>Premi la barra spaziatrice per iniziare il test.</p>
+        <button id="start-btn">Inizia il Test</button>
     </div>
-    <button id="start-btn" class="hidden">Start</button>
+    
     <div id="iat-container" class="hidden">
-        <div id="category-left" class="corner left-corner"></div>
-        <div id="category-right" class="corner right-corner"></div>
-        <div id="stimulus"></div>
+        <div id="category-left">Categoria Sinistra</div>
+        <div id="stimulus">Stimolo</div>
+        <div id="category-right">Categoria Destra</div>
+        <div id="error-message" class="hidden">Errore! Rispondi di nuovo.</div>
     </div>
-    <div id="error-message" class="error hidden">X</div>
+    
     <div id="results" class="hidden">
-        <h2>Risultati</h2>
-        <p id="reaction-times"></p>
+        <h1>Risultati</h1>
+        <p id="reaction-times">Tempo medio di reazione: </p>
     </div>
+
     <script src="iat.js"></script>
 </body>
 </html>
