--- a/index.html
+++ b/index.html
@@ -41,19 +41,21 @@
             font-size: 24px;
             margin-top: 20px;
         }
-        .start-button {
-            font-size: 24px;
+        #start-button {
+            display: none;
+            margin-top: 20px;
+            font-size: 20px;
             padding: 10px 20px;
-            cursor: pointer;
         }
     </style>
 </head>
 <body>
     <h1>Shame IAT Test</h1>
     <div id="instructions">
-        <p>Premi la barra spaziatrice per iniziare. Usa il tasto sinistro per "Io" o "Vergogna" e il tasto destro per "Non Io" o "Ansia".</p>
-        <button id="start-button" class="start-button hidden">Inizia il Test</button>
+        <p>Premi la barra spaziatrice per iniziare. Usa le frecce sinistra e destra per rispondere.</p>
     </div>
+    
+    <button id="start-button" class="hidden">Inizia Test</button>
 
     <div id="iat-container" class="hidden">
         <div id="category-left" class="corner left-corner"></div>
