--- a/index.html
+++ b/index.html
@@ -41,48 +41,50 @@
             font-size: 24px;
             margin-top: 20px;
         }
-        /* Stile per dispositivi mobili */
-        #touch-buttons {
-            margin-top: 30px;
-        }
-        .touch-button {
-            font-size: 18px;
+        #start-button {
+            margin-top: 50px;
             padding: 10px 20px;
-            margin: 10px;
-            background-color: #007BFF;
-            color: white;
-            border: none;
-            border-radius: 5px;
+            font-size: 18px;
             cursor: pointer;
         }
-        .touch-button:active {
-            background-color: #0056b3;
+        .touch-zone {
+            position: absolute;
+            top: 0;
+            width: 50%;
+            height: 100%;
+            cursor: pointer;
+        }
+        .left-zone {
+            left: 0;
+            background-color: rgba(255, 0, 0, 0.1); /* Light red for visual feedback */
+        }
+        .right-zone {
+            right: 0;
+            background-color: rgba(0, 0, 255, 0.1); /* Light blue for visual feedback */
         }
     </style>
 </head>
 <body>
     <h1>Shame IAT Test</h1>
     <div id="instructions">
-        <p>Premi la barra spaziatrice per iniziare. Usa il tasto sinistro per "Io" o "Vergogna" e il tasto destro per "Non Io" o "Ansia". Su dispositivi mobili, tocca i pulsanti.</p>
+        <p>Premi il pulsante Start per iniziare.</p>
+        <button id="start-button">Start</button>
     </div>
 
     <div id="iat-container" class="hidden">
         <div id="category-left" class="corner left-corner"></div>
         <div id="category-right" class="corner right-corner"></div>
         <div id="stimulus"></div>
+        <div id="error-message" class="error hidden">X</div>
     </div>
 
-    <div id="error-message" class="error hidden">X</div>
     <div id="results" class="hidden">
         <h2>Risultati</h2>
         <p id="reaction-times"></p>
     </div>
 
-    <!-- Pulsanti touch per dispositivi mobili -->
-    <div id="touch-buttons" class="hidden">
-        <button class="touch-button" id="left-button">Sinistra</button>
-        <button class="touch-button" id="right-button">Destra</button>
-    </div>
+    <div class="touch-zone left-zone"></div>
+    <div class="touch-zone right-zone"></div>
 
     <script src="iat.js"></script>
 </body>
