--- a/index.html
+++ b/index.html
@@ -41,50 +41,25 @@
             font-size: 24px;
             margin-top: 20px;
         }
-        #start-button {
-            margin-top: 50px;
-            padding: 10px 20px;
-            font-size: 18px;
-            cursor: pointer;
-        }
-        .touch-zone {
-            position: absolute;
-            top: 0;
-            width: 50%;
-            height: 100%;
-            cursor: pointer;
-        }
-        .left-zone {
-            left: 0;
-            background-color: rgba(255, 0, 0, 0.1); /* Light red for visual feedback */
-        }
-        .right-zone {
-            right: 0;
-            background-color: rgba(0, 0, 255, 0.1); /* Light blue for visual feedback */
-        }
     </style>
 </head>
 <body>
     <h1>Shame IAT Test</h1>
     <div id="instructions">
-        <p>Premi il pulsante Start per iniziare.</p>
-        <button id="start-button">Start</button>
+        <p>Premi la barra spaziatrice per iniziare. Usa il tasto sinistro per "Io" o "Vergogna" e il tasto destro per "Non Io" o "Ansia".</p>
     </div>
 
     <div id="iat-container" class="hidden">
         <div id="category-left" class="corner left-corner"></div>
         <div id="category-right" class="corner right-corner"></div>
         <div id="stimulus"></div>
-        <div id="error-message" class="error hidden">X</div>
     </div>
 
+    <div id="error-message" class="error hidden">X</div>
     <div id="results" class="hidden">
         <h2>Risultati</h2>
         <p id="reaction-times"></p>
     </div>
-
-    <div class="touch-zone left-zone"></div>
-    <div class="touch-zone right-zone"></div>
 
     <script src="iat.js"></script>
 </body>
