--- a/index.html
+++ b/index.html
@@ -64,11 +64,17 @@
     <h1>Shame IAT Test</h1>
     <div id="instructions">
         <p>Premi la barra spaziatrice per iniziare. Usa il tasto sinistro per "Io" o "Vergogna" e il tasto destro per "Non Io" o "Ansia". Su dispositivi mobili, tocca i pulsanti.</p>
-        <p>Premi la barra spaziatrice per iniziare. Usa il tasto sinistro per "Io" o "Vergogna" e il tasto destro per "Non Io" o "Ansia".</p>
     </div>
 
     <div id="iat-container" class="hidden">
-@@ -78,12 +61,6 @@ <h2>Risultati</h2>
+        <div class="corner left-corner" id="category-left"></div>
+        <div class="corner right-corner" id="category-right"></div>
+        <div id="stimulus"></div>
+        <div class="error hidden" id="error-message">Risposta errata!</div>
+    </div>
+
+    <div id="results" class="hidden">
+        <h2>Risultati</h2>
         <p id="reaction-times"></p>
     </div>
 
