--- a/index.html
+++ b/index.html
@@ -63,14 +63,14 @@
 <body>
     <h1>Shame IAT Test</h1>
     <div id="instructions">
-        <p>Premi la barra spaziatrice per iniziare. Usa il tasto sinistro per "Io" o "Vergogna" e il tasto destro per "Non Io" o "Ansia". Su dispositivi mobili, tocca i pulsanti.</p>
+        <p>Premi la barra spaziatrice per iniziare. Usa i tasti sinistro e destro per rispondere o tocca i pulsanti sui dispositivi mobili.</p>
     </div>
 
     <div id="iat-container" class="hidden">
         <div class="corner left-corner" id="category-left"></div>
         <div class="corner right-corner" id="category-right"></div>
         <div id="stimulus"></div>
-        <div class="error hidden" id="error-message">Risposta errata!</div>
+        <div id="error-message" class="error hidden">Errore! Rispondi correttamente.</div>
     </div>
 
     <div id="results" class="hidden">
