--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
             font-size: 24px;
             margin-top: 20px;
         }
+        /* Stile per pulsanti touch su dispositivi mobili */
         #touch-buttons {
             margin-top: 30px;
         }
@@ -57,31 +58,15 @@
         .touch-button:active {
             background-color: #0056b3;
         }
-        /* Stile per il pulsante di inizio */
-        #start-button-container {
-            margin-top: 50px;
-        }
-        #start-button {
-            font-size: 18px;
-            padding: 10px 20px;
-            background-color: #007BFF;
-            color: white;
-            border: none;
-            border-radius: 5px;
-            cursor: pointer;
-        }
-        #start-button:active {
-            background-color: #0056b3;
-        }
     </style>
 </head>
 <body>
     <h1>Shame IAT Test</h1>
     <div id="instructions">
-        <p>Premi la barra spaziatrice per iniziare. Usa il tasto sinistro per "Io" o "Vergogna" e il tasto destro per "Non Io" o "Ansia". Su dispositivi mobili, tocca i pulsanti.</p>
+        <p>Premi il pulsante "Inizia" per avviare il test. Usa il tasto sinistro per "Io" o "Vergogna" e il tasto destro per "Non Io" o "Ansia" su desktop. Su dispositivi mobili, tocca i pulsanti laterali.</p>
     </div>
 
-    <div id="start-button-container" class="hidden">
+    <div id="start-container">
         <button id="start-button">Inizia Test</button>
     </div>
 
@@ -89,17 +74,18 @@
         <div class="corner left-corner" id="category-left"></div>
         <div class="corner right-corner" id="category-right"></div>
         <div id="stimulus"></div>
-        <div class="error hidden" id="error-message">Risposta errata!</div>
+        <div class="error hidden" id="error-message">Errore! Prova di nuovo.</div>
+    </div>
+
+    <!-- Pulsanti touch per dispositivi mobili -->
+    <div id="touch-buttons" class="hidden">
+        <button class="touch-button" id="left-button">Sinistra</button>
+        <button class="touch-button" id="right-button">Destra</button>
     </div>
 
     <div id="results" class="hidden">
         <h2>Risultati</h2>
         <p id="reaction-times"></p>
-    </div>
-
-    <div id="touch-buttons" class="hidden">
-        <button class="touch-button" id="left-button">Sinistra</button>
-        <button class="touch-button" id="right-button">Destra</button>
     </div>
 
     <script src="iat.js"></script>
