--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
         }
         /* Stile per pulsanti touch su dispositivi mobili */
         #touch-buttons {
+            display: none; /* Nascondere per default */
             margin-top: 30px;
         }
         .touch-button {
@@ -57,6 +58,15 @@
         }
         .touch-button:active {
             background-color: #0056b3;
+        }
+        /* Visualizzare i pulsanti touch solo su dispositivi mobili */
+        @media (max-width: 768px) {
+            #start-container {
+                display: none;
+            }
+            #touch-buttons {
+                display: block;
+            }
         }
     </style>
 </head>
@@ -78,7 +88,7 @@
     </div>
 
     <!-- Pulsanti touch per dispositivi mobili -->
-    <div id="touch-buttons" class="hidden">
+    <div id="touch-buttons">
         <button class="touch-button" id="left-button">Sinistra</button>
         <button class="touch-button" id="right-button">Destra</button>
     </div>
