--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>IAT Test</title>
+    <title>Shame IAT Test</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -80,24 +80,6 @@
         #user-info button:active {
             background-color: #0056b3;
         }
-            
-    .category-box {
-        border: 2px solid #007BFF; /* Colore del bordo */
-        padding: 10px;
-        background-color: #f0f8ff; /* Colore di sfondo leggero */
-        border-radius: 8px; /* Angoli arrotondati */
-        font-size: 24px;
-        font-weight: bold;
-        display: inline-block;
-    }
-    .left-category-box {
-        float: left;
-        margin-left: 20px;
-    }
-    .right-category-box {
-        float: right;
-        margin-right: 20px;
-    }
     </style>
 </head>
 <body>
@@ -124,15 +106,6 @@
         <div class="corner right-corner" id="category-right"></div>
         <div id="stimulus"></div>
         <div class="error hidden" id="error-message">Errore! Prova di nuovo.</div>
-        <div id="iat-container" class="hidden">
-    <div class="corner left-corner">
-        <div class="category-box left-category-box" id="category-left"></div>
-    </div>
-    <div class="corner right-corner">
-        <div class="category-box right-category-box" id="category-right"></div>
-    </div>
-    <div id="stimulus"></div>
-    <div class="error hidden" id="error-message">Errore! Prova di nuovo.</div>
     </div>
 
     <!-- Pulsanti touch per dispositivi mobili -->
