--- a/index.html
+++ b/index.html
@@ -94,7 +94,23 @@
     </div>
 
     <div id="instructions" class="hidden">
-        <p>Premi il pulsante "Inizia" per avviare il test. Usa il tasto sinistro per "Io" o "Vergogna" e il tasto destro per "Non Io" o "Ansia" su desktop. Su dispositivi mobili, tocca i pulsanti laterali.</p>
+        <p>Nel prossimo compito le verranno presentati un insieme di parole da classificare in gruppi. Questo compito richiede l’abilità di classificare il più velocemente possibile e facendo meno errori possibile. Andare troppo lenti o fare troppi errori porterebbe ad un risultato non interpretabile. Questa parte dello studio richiede 5 minuti. Di seguito presentiamo una lista degli elementi e delle categorie a cui appartengono.
+
+Categoria	Elementi
+Io	'Io', 'Me', 'Miei', 'Mie', 'Mio', 'Me stesso’
+Non io	'Loro', 'Lui', 'Lei', 'Suo', 'Suoi', 'Essi’
+Vergogna	'Arrossamento', 'Imbarazzo', 'Vergogna', 'Vergognoso/a'
+Ansia	'Ansioso/a', 'Tachicardia', 'Paura', 'Incertezza'
+
+Ricordi
+•	Tenga gli indici destro e sinistro sui tasti ‘<’ ed ‘>’ (frecce direzionali) per poter rispondere velocemente, se da mobile compariranno due tasti ‘sinistra’ e ‘destra’ sullo schermo.
+•	Due etichette sulla parte superiore dello schermo le ricorderanno quale tasto dovrà usare per classificare le parole.
+•	Ogni parola ha una corretta classificazione. La maggior parte di esse sono facili.
+•	Collochi gli elementi sulla base della loro appartenenza alla categoria.
+•	Il test non dà alcun risultato se va troppo lentamente. La preghiamo di andare il più velocemente possibile.
+•	È normale commettere alcuni errori.
+•	Per un migliore risultato, si assicuri che il monitor o lo schermo sia impostato sulla massima luminosità e rimanga concentrato.
+</p>
     </div>
 
     <div id="start-container" class="hidden">
