--- a/index.html
+++ b/index.html
@@ -96,11 +96,11 @@
     <div id="instructions" class="hidden">
         <p><h2>Istruzioni</h2>
     <p>Nel prossimo compito le verranno presentati un insieme di parole da classificare in gruppi. Questo compito richiede l’abilità di classificare il più velocemente possibile e facendo meno errori possibile. Andare troppo lenti o fare troppi errori porterebbe ad un risultato non interpretabile. Questa parte dello studio richiede 5 minuti. Di seguito presentiamo una lista degli elementi e delle categorie a cui appartengono.</p>
-    <p><strong>Categoria Elementi</strong></p>
-    <p>Io: 'Io', 'Me', 'Miei', 'Mie', 'Mio', 'Me stesso'</p>
-    <p>Non io: 'Loro', 'Lui', 'Lei', 'Suo', 'Suoi', 'Essi'</p>
-    <p>Vergogna: 'Arrossamento', 'Imbarazzo', 'Vergogna', 'Vergognoso/a'</p>
-    <p>Ansia: 'Ansioso/a', 'Tachicardia', 'Paura', 'Incertezza'</p>
+    <p><strong>Categorie (in grassetto)</strong> ed Elementi</p>
+    <p><strong>Io:</strong> 'Io', 'Me', 'Miei', 'Mie', 'Mio', 'Me stesso'</p>
+    <p><strong>Non io:</strong> 'Loro', 'Lui', 'Lei', 'Suo', 'Suoi', 'Essi'</p>
+    <p><strong>Vergogna:</strong> 'Arrossamento', 'Imbarazzo', 'Vergogna', 'Vergognoso/a'</p>
+    <p><strong>Ansia:</strong> 'Ansioso/a', 'Tachicardia', 'Paura', 'Incertezza'</p>
     <p><strong>Ricordi</strong></p>
     <ul>
         <li>Tenga gli indici destro e sinistro sui tasti ‘<’ ed ‘>’ (frecce direzionali) per poter rispondere velocemente, se da mobile compariranno due tasti ‘sinistra’ e ‘destra’ sullo schermo.</li>
@@ -108,7 +108,7 @@
         <li>Ogni parola ha una corretta classificazione. La maggior parte di esse sono facili.</li>
         <li>Collochi gli elementi sulla base della loro appartenenza alla categoria.</li>
         <li>Il test non dà alcun risultato se va troppo lentamente. La preghiamo di andare il più velocemente possibile.</li>
-        <li>È normale commettere alcuni errori.</li>
+        <li>È normale commettere alcuni errori, questi verranno evidenziati con un apposito messaggio.</li>
         <li>Per un migliore risultato, si assicuri che il monitor o lo schermo sia impostato sulla massima luminosità e rimanga concentrato.</li>
     </ul>
 </p>
