--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Shame IAT Test</title>
+    <title>IAT Test</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -24,10 +24,10 @@
             font-size: 24px;
         }
         .left-corner {
-            left: 7px;
+            left: 5px;
         }
         .right-corner {
-            right: 7px;
+            right: 5px;
         }
         #stimulus {
             font-size: 30px;
@@ -83,7 +83,7 @@
     </style>
 </head>
 <body>
-    <h1>Shame IAT Test</h1>
+    <h1>IAT Test</h1>
 
     <!-- Modulo per nome e cognome -->
     <div id="user-info">
