--- a/index.html
+++ b/index.html
@@ -87,9 +87,9 @@
 
     <!-- Modulo per nome e cognome -->
     <div id="user-info">
-        <h2>Inserisci i tuoi dati</h2>
-        <input type="text" id="user-name" placeholder="Nome" required>
-        <input type="text" id="user-surname" placeholder="Cognome" required>
+    <label for="code">Inserisci il codice identificativo:</label>
+    <input type="text" id="code" required>
+    <small>Inserisci lo stesso codice identificativo inserito in precedenza: prima lettera del proprio nome; prima lettera del proprio cognome; numero di lettere del proprio cognome; ultime due cifre dell'anno di nascita (es. nome = Mario; cognome= Rossi; numero lettere = 5; anno di nascita = 2001; Codice identificativo =  MR501)</small>
         <button id="submit-user-info">Invia</button>
     </div>
 
