--- a/index.html
+++ b/index.html
@@ -87,9 +87,8 @@
 
     <!-- Modulo per nome e cognome -->
     <div id="user-info">
-        <h2>Inserisci i tuoi dati</h2>
-        <input type="text" id="user-name" placeholder="Nome" required>
-        <input type="text" id="user-surname" placeholder="Cognome" required>
+        <h2>Inserisci lo stesso codice identificativo inserito in precedenza: prima lettera del proprio nome; prima lettera nome del proprio cognome; numero di lettere del proprio cognome; ultime due cifre dell'anno di nascita (es. nome = Mario; cognome= Rossi; numero lettere = 5; anno di nascita = 2001; Codice identificativo =  MR501) dati</h2>
+        <input type="text" id="user-name" placeholder="Codice identificativo" required>
         <button id="submit-user-info">Invia</button>
     </div>
 
