--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 
     <!-- Modulo per nome e cognome -->
     <div id="user-info">
-        <h2>Inserisci lo stesso codice identificativo inserito in precedenza: prima lettera del proprio nome; prima lettera nome del proprio cognome; numero di lettere del proprio cognome; ultime due cifre dell'anno di nascita (es. nome = Mario; cognome= Rossi; numero lettere = 5; anno di nascita = 2001; Codice identificativo =  MR501)</h2>
+        <h2>Inserisci lo stesso codice identificativo inserito in precedenza: prima lettera del proprio nome; prima lettera nome del proprio cognome; numero di lettere del proprio cognome; ultime due cifre dell'anno di nascita (es. nome = Mario; cognome= Rossi; numero lettere = 5; anno di nascita = 2001; Codice identificativo =  MR501)(br) In seguito inserire la propria identità di genere</h2>
         <input type="text" id="user-name" placeholder="Codice identificativo" required>
         <input type="text" id="user-surname" placeholder="genere" required>
         <button id="submit-user-info">Invia</button>
