--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
                     instructionsDiv.classList.remove('hidden');
                     startContainer.classList.remove('hidden');
                 } else {
-                    alert('Per favore, inserisci sia il nome che il cognome.');
+                    alert('Per favore, inserisci entrambi i dati.');
                 }
             });
         });
