--- a/index.html
+++ b/index.html
@@ -87,28 +87,25 @@
 
     <!-- Modulo per nome e cognome -->
     <div id="user-info">
-        <h2>Inserisci lo stesso codice identificativo inserito in precedenza: prima lettera del proprio nome; prima lettera nome del proprio cognome; numero di lettere del proprio cognome; ultime due cifre dell'anno di nascita (es. nome = Mario; cognome= Rossi; numero lettere = 5; anno di nascita = 2001; Codice identificativo =  MR501)<br> In seguito inserire la propria identità di genere</h2>
+        <h2>Inserisci lo stesso codice identificativo inserito in precedenza: prima lettera del proprio nome; prima lettera nome del proprio cognome; numero di lettere del proprio cognome; ultime due cifre dell'anno di nascita (es. nome = Mario; cognome= Rossi; numero lettere = 5; anno di nascita = 2001; Codice identificativo =  MR501)</h2>
         <input type="text" id="user-name" placeholder="Codice identificativo" required>
-        <input type="text" id="user-surname" placeholder="genere" required>
         <button id="submit-user-info">Invia</button>
     </div>
 
     <div id="instructions" class="hidden">
-        <p><p>Nel prossimo compito le verranno presentati un insieme di parole da classificare in gruppi. Questo compito richiede l’abilità di classificare il più velocemente possibile e facendo meno errori possibile. Andare troppo lenti o fare troppi errori porterebbe ad un risultato non interpretabile. Questa parte dello studio richiede 5 minuti. Di seguito presentiamo una lista degli elementi e delle categorie a cui appartengono.</p>
-    <p><strong>Categorie (in grassetto)</strong> ed Elementi</p>
-    <p><strong>Io:</strong> 'Io', 'Me', 'Miei', 'Mie', 'Mio', 'Me stesso’</p>
-    <p><strong>Non io:</strong> 'Loro', 'Lui', 'Lei', 'Suo', 'Suoi', 'Essi’</p>
-    <p><strong>Vergogna:</strong> 'Arrossamento', 'Imbarazzo', 'Vergogna', 'Vergognoso/a'</p>
-    <p><strong>Ansia:</strong> 'Ansioso/a', 'Tachicardia', 'Paura', 'Incertezza'</p>
+    <p>Nel prossimo compito le verranno presentati un insieme di parole da classificare in gruppi. Questo compito richiede l’abilità di classificare il più velocemente possibile e facendo meno errori possibile. Andare troppo lenti o fare troppi errori porterebbe ad un risultato non interpretabile. Questa parte dello studio richiede 5 minuti. Di seguito presentiamo una lista degli elementi e delle categorie a cui appartengono.</p>
+    <table></table>
+    <tr><td><strong>Categorie</strong></td><td>Elementi</td></tr>
+    <tr><td><strong>Io</strong></td><td> 'Io', 'Me', 'Miei', 'Mie', 'Mio', 'Me stesso’</td></tr>
+    <tr><td><strong>Non io:</strong></td><td> 'Loro', 'Lui', 'Lei', 'Suo', 'Suoi', 'Essi'</td></tr>
+    <tr><td><strong>Vergogna:</strong></td><td> 'Arrossire', 'Imbarazzo', 'Vergogna', 'Vergognoso/a'</td></tr>
+    <tr><td><strong>Ansia:</strong></td><td> 'Ansioso/a', 'Tachicardia', 'Tremore', 'Ansia'</td></tr>
     <p><strong>Ricordi</strong></p>
     <ul>
         <li>Tenga gli indici destro e sinistro sui tasti ‘<’ ed ‘>’ (frecce direzionali) per poter rispondere velocemente, da mobile compariranno due tasti ‘sinistra’ e ‘destra’ sullo schermo.</li>
-        <li>Due etichette sulla parte superiore dello schermo le ricorderanno quale tasto dovrà usare per classificare le parole.</li>
+        <li>Due etichette sulla parte <strong>superiore</strong> dello schermo le ricorderanno quale tasto dovrà usare per classificare le parole.</li>
         <li>Ogni parola ha una corretta classificazione. La maggior parte di esse sono facili.</li>
-        <li>Collochi gli elementi sulla base della loro appartenenza alla categoria.</li>
-        <li>Il test non dà alcun risultato se va troppo lentamente. La preghiamo di andare il più velocemente possibile.</li>
         <li>È normale commettere alcuni errori.</li>
-        <li>Per un migliore risultato, si assicuri che il monitor o lo schermo sia impostato sulla massima luminosità e rimanga concentrato.</li>
     </ul>.</p>
     </div>
 
