--- a/index.html
+++ b/index.html
@@ -94,18 +94,19 @@
 
     <div id="instructions" class="hidden">
     <p>Nel prossimo compito le verranno presentati un insieme di parole da classificare in gruppi. Questo compito richiede l’abilità di classificare il più velocemente possibile e facendo meno errori possibile. Andare troppo lenti o fare troppi errori porterebbe ad un risultato non interpretabile. Questa parte dello studio richiede 5 minuti. Di seguito presentiamo una lista degli elementi e delle categorie a cui appartengono.</p>
-    <table></table>
+    <table>
     <tr><td><strong>Categorie</strong></td><td>Elementi</td></tr>
     <tr><td><strong>Io</strong></td><td> 'Io', 'Me', 'Miei', 'Mie', 'Mio', 'Me stesso’</td></tr>
     <tr><td><strong>Non io:</strong></td><td> 'Loro', 'Lui', 'Lei', 'Suo', 'Suoi', 'Essi'</td></tr>
     <tr><td><strong>Vergogna:</strong></td><td> 'Arrossire', 'Imbarazzo', 'Vergogna', 'Vergognoso/a'</td></tr>
     <tr><td><strong>Ansia:</strong></td><td> 'Ansioso/a', 'Tachicardia', 'Tremore', 'Ansia'</td></tr>
-    <p><strong>Ricordi</strong></p>
+    </table>
+    <p align=left><strong>Ricordi</strong></p>
     <ul>
-        <li>Tenga gli indici destro e sinistro sui tasti ‘<’ ed ‘>’ (frecce direzionali) per poter rispondere velocemente, da mobile compariranno due tasti ‘sinistra’ e ‘destra’ sullo schermo.</li>
-        <li>Due etichette sulla parte <strong>superiore</strong> dello schermo le ricorderanno quale tasto dovrà usare per classificare le parole.</li>
-        <li>Ogni parola ha una corretta classificazione. La maggior parte di esse sono facili.</li>
-        <li>È normale commettere alcuni errori.</li>
+    <li>Tenga gli indici destro e sinistro sui tasti ‘<’ ed ‘>’ (frecce direzionali) per poter rispondere velocemente, da mobile compariranno due tasti ‘sinistra’ e ‘destra’ sullo schermo.</li>
+    <li>Due etichette sulla parte <strong>superiore</strong> dello schermo le ricorderanno quale tasto dovrà usare per classificare le parole.</li>
+    <li>Ogni parola ha una corretta classificazione. La maggior parte di esse sono facili.</li>
+    <li>È normale commettere alcuni errori.</li>
     </ul>.</p>
     </div>
 
