--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
     </div>
 
     <div id="instructions" class="hidden">
-    <p>Nel prossimo compito le verranno presentati un insieme di parole da classificare in gruppi. Questo compito richiede l’abilità di classificare il più velocemente possibile e facendo meno errori possibile. Andare troppo lenti o fare troppi errori porterebbe ad un risultato non interpretabile. Questa parte dello studio richiede 5 minuti. Di seguito presentiamo una lista degli elementi e delle categorie a cui appartengono.</p>
+    <p>Nel prossimo compito le verranno presentati un insieme di parole da classificare in gruppi. Questo compito richiede l’abilità di classificare il più velocemente possibile e facendo meno errori possibile. Di seguito presentiamo una lista degli elementi e delle categorie a cui appartengono.</p>
     <table>
     <tr><th><strong>Categorie</strong></th><th>Elementi</th></tr>
     <tr><td><strong>Io</strong></td><td> 'Io', 'Me', 'Miei', 'Mie', 'Mio', 'Me stesso’</td></tr>
@@ -107,7 +107,7 @@
     <li>Due etichette sulla parte <strong>superiore</strong> dello schermo le ricorderanno quale tasto dovrà usare per classificare le parole.</li>
     <li>Ogni parola ha una corretta classificazione. La maggior parte di esse sono facili.</li>
     <li>È normale commettere alcuni errori.</li>
-    </ul>.</p>
+    </ul></p>
     </div>
 
     <div id="start-container" class="hidden">
