--- a/index.html
+++ b/index.html
@@ -22,6 +22,12 @@
             position: absolute;
             top: 20px;
             font-size: 24px;
+            padding: 10px;
+            border: 2px solid #000; /* Aggiunge il bordo */
+            border-radius: 8px; /* Arrotonda gli angoli */
+            background-color: #f0f0f0; /* Colore di sfondo per maggiore visibilità */
+            width: 200px; /* Imposta una larghezza fissa */
+            text-align: center; /* Centra il testo nel riquadro */
         }
         .left-corner {
             left: 5px;
