--- a/index.html
+++ b/index.html
@@ -29,6 +29,15 @@
             width: 200px; /* Imposta una larghezza fissa */
             text-align: center; /* Centra il testo nel riquadro */
         }
+        /* Regola per dispositivi mobili */
+@media (max-width: 600px) {
+    .left-corner {
+        left: 5%; /* Sposta la categoria sinistra più verso l'interno */
+    }
+    .right-corner {
+        right: 5%; /* Sposta la categoria destra più verso l'interno */
+    }
+}
         .left-corner {
             left: 5px;
         }
