--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         #stimulus {
             font-size: 30px;
             position: absolute;
-            top: 50%;
+            top: 55%;
             left: 50%;
             transform: translate(-50%, -50%);
         }
@@ -55,6 +55,10 @@
             color: red;
             font-size: 24px;
             margin-top: 20px;
+             position: absolute; /* Aggiungi questa proprietà per posizionarlo */
+        top: 10%; /* Ridotto da 20% a 10% per spostarlo più in alto */
+        left: 50%; /* Centra il messaggio di errore */
+        transform: translateX(-50%); /* Centra il messaggio di errore */
         }
         /* Stile per pulsanti touch su dispositivi mobili */
         #touch-buttons {
