--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@ padding:8px;
     <tr><td><strong>Ansia:</strong></td><td> 'Ansioso/a', 'Tachicardia', 'Tremore', 'Ansia'</td></tr>
     </table>
     <p><strong>Ricordi</strong></p>
-    <ul>
+    <ul align="left">
     <li>Tenga gli indici destro e sinistro sui tasti ‘<’ ed ‘>’ (frecce direzionali) per poter rispondere velocemente, da mobile compariranno due tasti ‘sinistra’ e ‘destra’ sullo schermo.</li>
     <li>Due etichette sulla parte <strong>superiore</strong> dello schermo le ricorderanno quale tasto dovrà usare per classificare le parole.</li>
     <li>Ogni parola ha una corretta classificazione. La maggior parte di esse sono facili.</li>
