--- a/index.html
+++ b/index.html
@@ -96,6 +96,20 @@
         #user-info button:active {
             background-color: #0056b3;
         }
+            /* Ingrandire il pulsante per iniziare il test */
+    #start-button {
+        font-size: 22px; /* Aumenta la dimensione del testo */
+        padding: 15px 30px; /* Aumenta il padding per ingrandire il pulsante */
+        background-color: #007BFF;
+        color: white;
+        border: none;
+        border-radius: 5px;
+        cursor: pointer;
+    }
+
+    #start-button:active {
+        background-color: #0056b3;
+    }
         table {
 border-collapse:collapse
 }
