--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@ padding:8px;
 
     <!-- Modulo per nome e cognome -->
     <div id="user-info">
-        <p>Inserisci lo stesso codice identificativo inserito in precedenza:<br><br>prima lettera del proprio nome; prima lettera nome del proprio cognome; numero di lettere del proprio cognome; ultime due cifre dell'anno di nascita (es. nome = <strong>Mario</strong>; cognome= <strong>Rossi</strong>; numero lettere = <strong>5</strong>; anno di nascita = 20<strong>01</strong>; Codice identificativo =  <strong>MR501</strong>)</p>
+        <p>Inserisci lo stesso codice identificativo inserito in precedenza:<br><br>prima lettera del proprio nome; prima lettera nome del proprio cognome; numero di lettere del proprio cognome; ultime due cifre dell'anno di nascita (es. nome = <strong>Mario</strong>; cognome= <strong>Rossi</strong>; numero lettere cognome = <strong>5</strong>; anno di nascita = 20<strong>01</strong>; Codice identificativo =  <strong>MR501</strong>)</p>
         <input type="text" id="user-name" placeholder="Codice identificativo" required>
         <button id="submit-user-info">Invia</button>
     </div>
